Improving ticket and ticket type logic